# rusty-grpc

./: README.md  health_probe.sh
client/: Cargo.toml
client/src/: main.rs
protos/: hello.proto  voting.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
